--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<nav>
 					<ul>
 						<li><a href="pages/http-semantic.htm">HTTP Semantics</a> - Understanding HTTP semantics.</li>
+						<li><a href="pages/dst.htm">Daylight Savings Time</a> - "spring forward and fall back".</li>
 					</ul>
 				</nav>
 			</section>
